follower logic ok

--- a/CarlosGram/myapp/templates/home.html
+++ b/CarlosGram/myapp/templates/home.html
@@ -37,35 +37,36 @@
                         {{follower.username}}
                     {% endfor %}
                 </div>
-            </div>
-        
+            </div>  
         {% for post in posts %}
-        <div class="post">      
-            <div class = "info">
-                <a href="{% url 'view_other_profile' username=post.user.username %}">
-                    <pre><span><img id = "profilepic" src="{{ post.user_profile.profile_image.url }}" alt="">  {{ post.user.username }}  </span></pre>
-                </a>       
-               <div id = "postlikes">
-                    {% if post.id in liked_posts %}
-                    <a href="{% url 'like_post' post.id %}">
-                        <img id = "heart" src="{% static 'img/LikedPost.png' %}" alt="">
-                    </a><p>{{ post.likes}}</p>  
-                    {% else %}
-                    <a href="{% url 'like_post' post.id %}">
-                        <img id = "heart" src="{% static 'img/likePost.svg' %}" alt="">
-                    </a><p>{{ post.likes}}</p>       
-                    {% endif %}
-                    <a href="{% url 'comment_post' post.id %}">
-                        <img id = "heart" style = "width: 25px" src="{% static 'img/comment.svg' %}" alt="">
-                    </a><p>{{post.comment}}</p>
-               </div>
-            </div>
+        {% if current_user in post.user.followers.all %}
+            <div class="post">      
+                <div class = "info">
+                    <a href="{% url 'view_other_profile' username=post.user.username %}">
+                        <pre><span><img id = "profilepic" src="{{ post.user_profile.profile_image.url }}" alt="">  {{ post.user.username }}  </span></pre>
+                    </a>       
+                <div id = "postlikes">
+                        {% if post.id in liked_posts %}
+                        <a href="{% url 'like_post' post.id %}">
+                            <img id = "heart" src="{% static 'img/LikedPost.png' %}" alt="">
+                        </a><p>{{ post.likes}}</p>  
+                        {% else %}
+                        <a href="{% url 'like_post' post.id %}">
+                            <img id = "heart" src="{% static 'img/likePost.svg' %}" alt="">
+                        </a><p>{{ post.likes}}</p>       
+                        {% endif %}
+                        <a href="{% url 'comment_post' post.id %}">
+                            <img id = "heart" style = "width: 25px" src="{% static 'img/comment.svg' %}" alt="">
+                        </a><p>{{post.comment}}</p>
+                </div>
+                </div>
             {% if post.image %}
                 <img id = "post_image" src="{{ post.image.url }}" alt="">
             {% endif %}
             <p>{{ post.description }}</p>
             <p id = "date">{{ post.date }}</p>
         </div>
+        {% endif %}
         {% endfor %}
     </div>
 </body>
