--- a/CarlosGram/myapp/static/homestyle.css
+++ b/CarlosGram/myapp/static/homestyle.css
@@ -162,3 +162,12 @@ input[type="image"] {
     font-size: 12px;
     color : #cecece;
 }
+
+#opening_message {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-top: 30px;
+
+}
