--- a/CarlosGram/myapp/templates/home.html
+++ b/CarlosGram/myapp/templates/home.html
@@ -21,11 +21,15 @@
     <div class="posts">
         <div class="card2">
             <div class="card-content">
-                <h2>Here's what's new!</h2>
-                <p>Later add information to a card</p>
-                <p>this should be bigger</p>
-                <p>and this too</p>
-                <button>hey there</button>
+                <h2>Other {{user.species}}s for you to meet!</h2>
+                {% for userprofile in userprofiles %} 
+                    {% if userprofile.user.species == current_user.species and userprofile.user != current_user %}
+                        <a href="{% url 'view_other_profile' username=userprofile.user.username %}">
+                            <pre><span ><img id = "profilepic" src="{{ userprofile.profile_image.url }}" alt="">  {{ userprofile.user.username }}  </span></pre>
+                        </a>
+                    {% endif %}
+                {% endfor %}
+                
             </div>
         </div>
         <div class="posts">
