--- a/CarlosGram/myapp/static/homestyle.css
+++ b/CarlosGram/myapp/static/homestyle.css
@@ -80,6 +80,7 @@ span {
 
 .card2 {
     /* Inherit styles from .card */
+    width: 300px;
     border: 1px solid #CCC;
     border-radius: 10px;
     padding: 30px;
@@ -170,4 +171,24 @@ input[type="image"] {
     flex-direction: column;
     margin-top: 30px;
 
+}
+.notification_info{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative;
+    bottom:20px;
+    
+}
+a {
+    color: #20a6db;
+}
+.user_box{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+    gap: 10px; /* Add this line */
 }
