--- a/CarlosGram/myapp/templates/createnewpost.html
+++ b/CarlosGram/myapp/templates/createnewpost.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     {% load static %}
+    <link rel="icon" href="{% static 'img/icon.png' %}">
     <link rel="stylesheet" href="{% static 'createnewpoststyle.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Create a new post</title>
     <style>
         #image-preview {
             max-width: 100%;
