--- a/CarlosGram/myapp/templates/profile.html
+++ b/CarlosGram/myapp/templates/profile.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{{user_profile.user.username}}'s Profile</title>
 </head>
 <body>    
     <div class = "container">
