--- a/CarlosGram/myapp/static/search_results.css
+++ b/CarlosGram/myapp/static/search_results.css
@@ -31,3 +31,18 @@ button:hover {
     border-radius: 10px;
     box-shadow: 0 5px 7px rgba(22, 45, 255, 0.2);
 }
+.search_results {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin-top: 30px;
+    gap:20px;
+}
+.users {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    
+}
