--- a/CarlosGram/myapp/templates/base.html
+++ b/CarlosGram/myapp/templates/base.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Post Details</title>
     <style>
             body, pre{
                 background-color: #fafafa;
@@ -10,6 +11,7 @@
             }
     </style>
     {% load static %}
+    <link rel="icon" href="{% static 'img/icon.png' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Afacad&display=swap" rel="stylesheet">
