--- a/CarlosGram/myapp/templates/profilebase.html
+++ b/CarlosGram/myapp/templates/profilebase.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     {% load static %}
+    <link rel="icon" href="{% static 'img/icon.png' %}">
+    {% load static %}
     <link rel="stylesheet" href="{% static 'profilestyles.css' %}">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
